objects/IDMS_Social_Access__c.object
<CustomObject>
    <fields>
        <fullName>IDMS_RegistrationSource__c</fullName>
        <label>IDMS_RegistrationSource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDMS_Revoke__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IDMS Revoke</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SocialUniqueIdentifier__c</fullName>
        <label>Social Unique Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SocialUserName__c</fullName>
        <label>Social UserName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SocialUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Social User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IDMS_Social_Access_Revokes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Social_Provider__c</fullName>
        <label>Social Provider</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>IDMS Social Access</label>
    <listViews>
        <fullName>IDMS_Social_Log</fullName>
        <columns>NAME</columns>
        <columns>IDMS_RegistrationSource__c</columns>
        <columns>IDMS_Revoke__c</columns>
        <columns>Social_Provider__c</columns>
        <columns>SocialUniqueIdentifier__c</columns>
        <columns>SocialUser__c</columns>
        <columns>SocialUserName__c</columns>
        <filterScope>Everything</filterScope>
        <label>IDMS Social Log</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>I-{00000000}</displayFormat>
        <label>Social Access Revoke Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IDMS_Social_Access</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>